# attested-ohttp-client

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md
.devcontainer/: Dockerfile
.github/workflows/: check.yml
docker/: Dockerfile  run.sh
examples/: demo.py
ohttp-client/: Cargo.toml
ohttp-client-cli/: Cargo.toml
ohttp-client-cli/src/: main.rs
ohttp-client/src/: lib.rs  main.rs
pyohttp/: Cargo.toml  pyproject.toml
pyohttp/src/: lib.rs
samples/: ohttp-whisper-cli.py
scripts/: build-pyohttp.sh
test/: conftest.py  tests_ohttp.py
verifier/: Cargo.toml
verifier/src/: err.rs  lib.rs
