[package]
name = "ohttp-client"
version = "0.1.0"
authors = ["Antoine Delignat-Lavaud <antdl@microsoft.com>, Arthi Gokarn <arthig@microsoft.com>, Kapil Vaswani <kapilv@microsoft.com>, Tien Le <tienle@microsoft.com>"]
edition = "2021"

[features]
default = ["rust-hpke"]
nss = ["ohttp/nss"]
rust-hpke = ["ohttp/rust-hpke"]

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
colored = "2.1.0"
env_logger = {version = "0.10", default-features = false}
hex = "0.4"
log = "0.4.22"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
rustls = { version = "0.21.6", features = ["dangerous_configuration"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.30"
futures = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["default", "json", "env-filter"] }
infer = "0.16.0"

[dependencies.verifier]
path= "../verifier"

[dependencies.bhttp]
git = "https://github.com/microsoft/ohttp.git"
branch = "main"
features = ["bhttp", "http"]

[dependencies.ohttp]
git = "https://github.com/microsoft/ohttp.git"
branch = "main"
features = ["client"]
default-features = false
