[package]
name = "pyohttp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyohttp"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.22"
pyo3 = "0.20.3"
pyo3-asyncio = { version = "0.20.0", features = ["attributes", "tokio-runtime"] }
pyo3-log = "0.9.0"
tokio = "1.41.1"

[dependencies.ohttp-client]
path= "../ohttp-client"
